encrypted message decryption displayment

--- a/app/assets/i18n/de.json
+++ b/app/assets/i18n/de.json
@@ -57,7 +57,9 @@
             "TITLE": "Saldo"
         },
         "HISTORY": {
-            "TITLE": "Historie"
+            "TITLE": "Historie",
+            "DECRYPT": "Entschlüsseln",
+            "PIN_INPUT_HINT": "PIN"
         },
         "SETTINGS": {
             "ABOUT": {
