--- a/app/assets/i18n/ru.json
+++ b/app/assets/i18n/ru.json
@@ -57,7 +57,9 @@
             "TITLE": "Баланс"
         },
         "HISTORY": {
-            "TITLE": "История"
+            "TITLE": "История",
+            "DECRYPT": "Decrypt",
+            "PIN_INPUT_HINT": "ПИН"
         },
         "SETTINGS": {
             "ABOUT": {
