--- a/app/assets/i18n/el.json
+++ b/app/assets/i18n/el.json
@@ -56,7 +56,9 @@
             "TITLE": "Υπόλοιπο"
         },
         "HISTORY": {
-            "TITLE": "Ιστορικό"
+            "TITLE": "Ιστορικό",
+            "DECRYPT": "Decrypt",
+            "PIN_INPUT_HINT": "PIN"
         },
         "SETTINGS": {
             "ABOUT": {
