--- a/app/assets/i18n/es.json
+++ b/app/assets/i18n/es.json
@@ -56,7 +56,9 @@
             "TITLE": "Balance"
         },
         "HISTORY": {
-            "TITLE": "Historial"
+            "TITLE": "Historial",
+            "DECRYPT": "Decrypt",
+            "PIN_INPUT_HINT": "NIP"
         },
         "SETTINGS": {
             "ABOUT": {
