--- a/app/assets/i18n/hu.json
+++ b/app/assets/i18n/hu.json
@@ -56,7 +56,9 @@
             "TITLE": "Egyenleg"
         },
         "HISTORY": {
-            "TITLE": "Történet"
+            "TITLE": "Történet",
+            "DECRYPT": "Decrypt",
+            "PIN_INPUT_HINT": "PIN"
         },
         "SETTINGS": {
             "ABOUT": {
