--- a/app/assets/i18n/pl.json
+++ b/app/assets/i18n/pl.json
@@ -56,7 +56,9 @@
             "TITLE": "Stan konta"
         },
         "HISTORY": {
-            "TITLE": "Historia"
+            "TITLE": "Historia",
+            "DECRYPT": "Decrypt",
+            "PIN_INPUT_HINT": "Pin"
         },
         "SETTINGS": {
             "ABOUT": {
