decrypt error handling, public key fetching

--- a/app/assets/i18n/de.json
+++ b/app/assets/i18n/de.json
@@ -59,6 +59,7 @@
         "HISTORY": {
             "TITLE": "Historie",
             "DECRYPT": "Entschlüsseln",
+            "DECRYPT_IMPOSSIBLE": "Kann nicht entschlüsselt werden!",
             "PIN_INPUT_HINT": "PIN"
         },
         "SETTINGS": {
