--- a/app/assets/i18n/en.json
+++ b/app/assets/i18n/en.json
@@ -59,6 +59,7 @@
         "HISTORY": {
             "TITLE": "History",
             "DECRYPT": "Decrypt",
+            "DECRYPT_IMPOSSIBLE": "Could not be decrypted!",
             "PIN_INPUT_HINT": "Pin"
         },
         "SETTINGS": {
