--- a/app/assets/i18n/it.json
+++ b/app/assets/i18n/it.json
@@ -58,6 +58,7 @@
         "HISTORY": {
             "TITLE": "Storico",
             "DECRYPT": "Decrypt",
+            "DECRYPT_IMPOSSIBLE": "Could not be decrypted!",
             "PIN_INPUT_HINT": "Pin"
         },
         "SETTINGS": {
