--- a/app/assets/i18n/ru.json
+++ b/app/assets/i18n/ru.json
@@ -59,6 +59,7 @@
         "HISTORY": {
             "TITLE": "История",
             "DECRYPT": "Decrypt",
+            "DECRYPT_IMPOSSIBLE": "Could not be decrypted!",
             "PIN_INPUT_HINT": "ПИН"
         },
         "SETTINGS": {
