--- a/app/assets/i18n/cs.json
+++ b/app/assets/i18n/cs.json
@@ -117,7 +117,7 @@
         "CONTACT_ADDED": "Kontakt úspěšně přidaný!",
         "DECIMAL_AMOUNT": "Zadejte desetinné číslo, kolik Burstcoinů chcete poslat!",
         "DECIMAL_FEE": "Zadejte desetinné číslo (více jak 1) pro poplatek!",
-        "ENTER_SOMETHING": "Zadajte něco!",
+        "ENTER_SOMETHING": "Zadejte něco!",
         "EXCEED": "Částka + poplatek přesahují váš zůstatek!",
         "PIN": "Zadejte šestimístné číslo jako PIN kód!",
         "REMOVE": "Účet byl úspěšně odebrán!",
