--- a/app/assets/i18n/fr.json
+++ b/app/assets/i18n/fr.json
@@ -67,7 +67,7 @@
                 "ABOUT": "A propos",
                 "ASSOCIATION": "En association avec",
                 "DEVELOPED": "Développé par",
-                "TWITTER": "Suivez nous sur twitter pour rester au courant de nos projet!",
+                "TWITTER": "Suivez-nous sur twitter pour rester au courant de nos projets!",
                 "VERSION": "Version"
             },
             "CURRENCY": {
@@ -132,7 +132,7 @@
             "ACCOUNT_ID": "Impossible de générer l'id de compte via une clé publique!",
             "ADDRESS": "Impossible de générer une adresse Burst via l'id de compte!",
             "CONNECTION": "Echec de récupération des données. Vérifiez votre connexion!",
-            "CONTACT":"Failed to add new contact!",
+            "CONTACT":"Echec de l'ajout d'un nouveau contact!",
             "CURRENCY": "Echec de modification de monnaie!",
             "KEYPAIR": "Echec de génération de clé associée à la phrase de passe!",
             "LANGUAGE": "Echec de modification de langue!",
