--- a/app/assets/i18n/el.json
+++ b/app/assets/i18n/el.json
@@ -123,7 +123,7 @@
         "SELECTED": "Επιλεγμένος λογαργιασμός: {{value}}",
         "TRANSACTION": "Επιτυχής συναλλαγή!",
         "UPDATE_CURRENCY": "Το νόμισμα ενημερώθηκε με επιτυχία!",
-        "UDPDATE_LANGUAGE": "Η γλώσσα ενημερώθηκε με επιτυχία!",
+        "UPDATE_LANGUAGE": "Η γλώσσα ενημερώθηκε με επιτυχία!",
         "UPDATE_NODE": "ο κόμβος ενημερώθηκε με επιτυχία!",
         "WRONG_PASSPHRASE": "Λαθος φράση-κλειδί! Η παρεχόμενη φράση-κλειδί δεν δημιουργεί δημόσιο κλειδί που αντιστοιχεί στο λογαριασμό σας!",
         "WRONG_PIN": "Το παρεχόμενο PIN δεν ταιριάζει με το PIN του λογαριασμού σας",
