--- a/app/assets/i18n/hi.json
+++ b/app/assets/i18n/hi.json
@@ -124,7 +124,7 @@
         "SELECTED": "चयनित खाता: {{value}}",
         "TRANSACTION": "ट्रांसक्शन सफल हुआ !",
         "UPDATE_CURRENCY": "मुद्रा अपडेट सफल हुआ !",
-        "UDPDATE_LANGUAGE": "भाषा अपडेट सफल हुआ!",
+        "UPDATE_LANGUAGE": "भाषा अपडेट सफल हुआ!",
         "UPDATE_NODE": "नोड अपडेट सफल हुआ !",
         "WRONG_PASSPHRASE": "गलत पदबंध! प्रदान किए गए पासफ़्रेज़ आपके खाते को सार्वजनिक कुंजी को उत्पन्न नहीं करता है!",
         "WRONG_PIN": "उपलब्ध पिन खाते के पिन से मेल नहीं खाता!",
