--- a/app/assets/i18n/ru.json
+++ b/app/assets/i18n/ru.json
@@ -124,7 +124,7 @@
         "SELECTED": "Выбранный аккаунт: {{value}}",
         "TRANSACTION": "Транзакция выполнена!",
         "UPDATE_CURRENCY": "Валюта успешно обновлена!",
-        "UDPDATE_LANGUAGE": "Язык успешно обновлен!",
+        "UPDATE_LANGUAGE": "Язык успешно обновлен!",
         "UPDATE_NODE": "Узел успешно обновлен!",
         "WRONG_PASSPHRASE": "Неверный пароль! Предоставленная кодовая фраза не генерирует открытый ключ, назначенный вашей учетной записи!",
         "WRONG_PIN": "Указанный ПИН не совпадает с ПИН кодом аккаунта!",
