--- a/app/assets/i18n/ta.json
+++ b/app/assets/i18n/ta.json
@@ -124,7 +124,7 @@
         "SELECTED": "தேர்ந்தெடுக்கப்பட்ட கணக்கு: {{value}}",
         "TRANSACTION": "வெற்றிகரமாக அனுப்பப்பட்டது!",
         "UPDATE_CURRENCY": "நாணயம் வெற்றிகரமாக மாற்றப்பட்டது!",
-        "UDPDATE_LANGUAGE": "மொழி வெற்றிகரமாக மாற்றப்பட்டது!",
+        "UPDATE_LANGUAGE": "மொழி வெற்றிகரமாக மாற்றப்பட்டது!",
         "UPDATE_NODE": "முனை வெற்றிகரமாக மாற்றப்பட்டது!",
         "WRONG_PASSPHRASE": "தவறான கடவுச்சொல்! ",
         "WRONG_PIN": "வழங்கப்பட்ட இரகசிய எண் கணக்கு இரகசிய எண்ணுடன் பொருந்தவில்லை!",
