--- a/app/assets/i18n/al.json
+++ b/app/assets/i18n/al.json
@@ -14,7 +14,7 @@
         "PIN_INPUT_HINT": "PIN",
         "POSSIBILITY_INPUT_HINT": "Fjala # {{vlera}}",
         "NEXT": "Tjetra"
-    }
+    },
     "IMPORT" : {
         "ACTION_BAR_TITLE": "Importo një llogari ekzistuese",
         "ACTIVE_ACCOUNT": "Llogaria aktive",
@@ -43,25 +43,25 @@
                 "PASSPHRASE_INPUT_HINT": "Passphrase",
                 "PIN_INPUT_HINT": "PIN",
                 "NEXT": "Tjetra"
-            }
+            },
             "BALANCE": "Bilanci",
             "CREATE": "Krijo",
             "IMPORT": "Import",
             "REMOVE": "Jeni i sigurt që doni ta fshini këtë llogari?",
             "TITLE": "Llogaritë"
-        }
+        },
         "BALANCE": {
             "ACTIVATE": "Aktivizo",
             "BALANCE": "Bilanci",
             "SEND": "Dërgo",
             "TITLE": "Bilanci"
-        }
+        },
         "HISTORY": {
             "TITLE": "Historia",
             "DECRYPT": "Dekripto",
             "DECRYPT_IMPOSSIBLE": "Dekriptimi dështoi",
             "PIN_INPUT_HINT": "Pinning"
-        }
+        },
         "SETTINGS": {
             "ABOUT": {
                 "ABOUT": "Rreth",
@@ -69,25 +69,25 @@
                 "DEVELOPED": "Zhvilluar nga",
                 "TWITTER": "Na ndiqni në eksitim për t'u informuar për projektet tona!",
                 "VERSION": "Versioni"
-            }
+            },
             "CURRENCY": {
                 "CURRENCY": "Valuta"
-            }
+            },
             "DOCUMENTATION": {
                 "DOCUMENTATION": "Dokumentacioni"
-            }
+            },
             "LANGUAGE": {
                 "LANGUAGE": "Gjuha"
-            }
+            },
             "NODE": {
                 "INFO": "Serveri përdoret për të komunikuar me rrjetin Burst",
                 "NODE": "Server"
-            }
+            },
             "SUPPORT": {
                 "CONTRIBUTION": "Ne gjithashtu i vlerësojmë të gjitha kontributet.",
                 "DONATE": "A e pëlqen këtë aplikacion? Trego me BURST!",
                 "SUPPORT": "Mbështetje"
-            }
+            },
             "TITLE": "Cilësimet"
         }
     },
@@ -105,14 +105,14 @@
          "PIN_INPUT_HINT": "Pin",
          "RECIPIENT": "Përfitues",
          "VERIFY": "Kontrollo"
-     }
+     },
      "START" : {
          "CREATE": "Krijo",
          "IMPORT": "Import",
          "INFO": "Asnjë llogari e re akoma, importon një llogari ekzistuese ose krijo një!"
-     }
+     },
     "NOTIFICATION" : {
-        "ADDRESS": "Futni një adresë të vlefshme Burst".
+        "ADDRESS": "Futni një adresë të vlefshme Burst",
         "COPIED": "{{value}} adresa kopjohet!",
         "CONTACT_ADDED": "Kontaktoj me sukses",
         "DECIMAL_AMOUNT": "Ju lutemi shkruani shumën e BURST që dëshironi të dërgoni!",
@@ -129,7 +129,7 @@
         "WRONG_PASSPHRASE": "Passphrase gabuar! Kjo fjalëkalim nuk gjeneron çelësin publik të lidhur me llogarinë tënde!",
         "WRONG_PIN": "Ky kod pin nuk përputhet me pinin e llogarisë!",
         "ERRORS": {
-            "ACCOUNT_ID": "Nuk mund të gjeneroj id llogari nëpërmjet çelës publik"
+            "ACCOUNT_ID": "Nuk mund të gjeneroj id llogari nëpërmjet çelës publik",
             "ADDRESS": "Nuk mund të gjenerojë një adresë burst nëpërmjet idit të llogarisë",
             "CONNECTION": "Dështoi në rikthimin e të dhënave, kontrolloni lidhjen tuaj!",
             "CONTACT": "Dështoi në shtimin e një kontakti të ri!",
