--- a/app/assets/i18n/en.json
+++ b/app/assets/i18n/en.json
@@ -100,6 +100,11 @@
         "BALANCE": "Balance",
         "CONTACTS": "Contacts",
         "FEE": "Fee",
+        "FEES": {
+            "CHEAP": "Cheap",
+            "PRIORITY": "Priority",
+            "STANDARD": "Standard"
+        },
         "FIAT": "Fiat currency to BURST",
         "MESSAGE": "Message",
         "PIN_INPUT_HINT": "Pin",
